Update: my-twilight-crud/vercel.json

--- a/my-twilight-crud/vercel.json
+++ b/my-twilight-crud/vercel.json
@@ -1,5 +1,4 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "api/index.js",
@@ -15,5 +14,10 @@
       "src": "/(.*)",
       "dest": "/public/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 10
+    }
+  }
 }
